test/sema/const-increment.delta.output
const-increment.delta:8:9: error: cannot increment immutable value of type 'int'
    (*i)++;
        ^
