test/sema/const-increment.delta
// RUN: %check_errors %not %delta -typecheck %s

extern const int* f();

void main() {
    var i = f();
    // CHECK: [[@LINE+1]]:9: error: cannot increment immutable value of type 'int'
    (*i)++;
}
